# omron_moma_ros2

./: README.md
MOMA_project/: frames_2025-11-06_16.06.45.gv  run_polaris_moma.sh
MOMA_project/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
MOMA_project/src/log/: latest_build
MOMA_project/src/moma_tf/: setup.cfg  setup.py
MOMA_project/src/polaris/: HowToRun.txt
MOMA_project/src/polaris_node/: CMakeLists.txt  package.xml  plot_polaris.py
MOMA_project/src/polaris_node/src/: capisample_node.cpp
MOMA_project/src/polaris_node/src/CombinedApiSample/: HowToUse.txt  doxygen.conf  example.csv  readme.txt
MOMA_project/src/polaris_node/src/CombinedApiSample/sample/: sample.vcxproj
MOMA_project/src/polaris_node/src/CombinedApiSample/sample/src/: main.cpp
MOMA_project/src/polaris_node/src/install/: local_setup.sh  setup.bash  setup.zsh
MOMA_project/src/polaris_node/src/log/: latest  latest_build
MOMA_project/src/polaris_udp_bridge/: README.md  package.xml  setup.cfg  setup.py
MOMA_project/src/polaris_udp_bridge/launch/: polaris_bridge_viz.launch.py  polaris_calibrate.launch.py  polaris_frames.launch.py  polaris_target_bridge.launch.py
MOMA_project/src/polaris_udp_bridge/polaris_udp_bridge/: bridge_node.py  polaris_calibrate.py  polaris_to_robot_bridge.py  polaris_viz.py
install/: local_setup.sh  setup.sh
install/amr_arcl_interface/lib/amr_arcl_interface/: client  server
install/amr_arcl_interface/share/amr_arcl_interface/: package.bash  package.dsv  package.sh
install/amr_visualisation/lib/amr_visualisation/: data_points_marker  goals_marker  joints_publisher  laser_scans
install/amr_visualisation/share/amr_visualisation/: local_setup.dsv  local_setup.sh  package.bash  package.sh  package.zsh
install/camera/lib/camera/: camera_client  camera_server
install/camera/share/camera/: package.sh
log/: latest_build
(+239 files in other folders)
